Added view for side panel

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <script type="text/javascript" src="collections/cells.js"></script>
 <script type="text/javascript" src="views/pawn.js"></script>
 <script type="text/javascript" src="views/cell.js"></script>
+<script type="text/javascript" src="views/panel.js"></script>
 <script type="text/javascript" src="views/board.js"></script>
 </body>
 </html>
